Closed
Bug 772797
Opened 14 years ago
Closed 14 years ago
AOT compiled shell applications do not properly shutdown when finished
Categories
(Tamarin Graveyard :: Virtual Machine, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: brbaker, Unassigned)
Details
(Whiteboard: WE:3222766 AOT)
AOT compiled tamarin acceptance media does not finish executing properly. The AOT compiled application will execute all of the tests but the process will not exit.
Method:
1) Compile the "SDK with OSX AVMShell" target
2) AOT compile any of the tamarin acceptance test media
% cd <depot-path>/code/build/cocoatouch/results/Release-iphonesimulator/test/acceptance
% export BUILTINABC=<depot-path>/code/build/cocoatouch/results/Release-iphonesimulator/lib/aot/lib/builtin.abc
% export SHELLABC=<depot-path>/code/build/cocoatouch/results/Release-iphonesimulator/lib/aot/lib/shell_toplevel.abc
% export ASC=<depot-path>/tools/asc/asc.jar
% export AOT_ARGS='-Xsdk x86-shell -Xverbose 2 -XO3'
# Need to call once just to get it to compile and link the iOS application
% ./runtests.py --aotsdk=../../ --aotout=../../output --aotargs="$AOT_ARGS" --config=x86-mac-AOT --rebuildtests as3/AbcDecoder/simple.as
3) run the AOT compile application
% ../../output/as3.AbcDecoder.simple
Result:
You will get the expected output from the test, but the process will not exit:
import variables defined from a varsDef.abc file
importing 'str' = imported string PASSED!
importing 'num' = 10 PASSED!
#0 0x9887883e in __psynch_cvwait ()
#1 0x939e0e21 in _pthread_cond_wait ()
#2 0x9399142c in pthread_cond_wait$UNIX2003 ()
#3 0x0029a514 in main ()
Comment 1•14 years ago
|
||
changeset: 7469:0f04ca05aed4
user: Brent Baker <brbaker@adobe.com>
summary: Bug 772797: AOT compiled shell applications do not properly shutdown when finished (p=stan)
http://hg.mozilla.org/tamarin-redux/rev/0f04ca05aed4
| Reporter | ||
Updated•14 years ago
|
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•