Bug 772797: AOT compiled shell applications do not properly shutdown when finished (p=stan)

Integration of CL:1082174

CL@1086180